v21.04/de/_sources/modules.rst.txt
Softwaremodule

Der

rc_visard

 wird mit einer Reihe von On-Board-Softwaremodulen mit verschiedenen
Funktionalitäten ausgeliefert. Jedes Softwaremodul bietet über seinen
zugehörigen

Node

 eine

REST-API-Schnittstelle

 als Programmierschnittstelle an.

Die Softwaremodule des

rc_visard

 können unterteilt werden in

3D-Kamera-Module, Abschnitt \ref{camera_modules:sect-3d-camera-
modules}  welche Stereobildpaare aufnehmen und 3D Tiefeninformationen
bereitstellen, und auch über die GigE Vision/GenICam-Schnittstelle des
rc_visard konfigurierbar sind.  Navigationsmodule, Abschnitt
\ref{navigation_modules:sect-navigation-modules}  welche Schätzungen
der momentanen Pose, Geschwindigkeit und Beschleunigung des rc_visard
bereitstellen,

Detektionsmodule, Abschnitt \ref{detection_modules:sect-detection-
modules}  welche eine Vielzahl verschiedener Detektionsfunktionen, wie
Greifpunktberechnungen und Objekterkennung anbieten.

Konfigurationsmodule, Abschnitt \ref{configuration_modules:sect-
configuration-modules}  welche es dem Nutzer ermöglichen, den
rc_visard für spezielle Anwendungen zu konfigurieren.

